Not yet finished with this. It's not working because annotation replacement is not applied.